--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="fragment" content="!">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
+    <link rel="stylesheet" href="path/to/your/custom.css" />
     <meta charset="UTF-8">
     <style type="text/css">
     /* hide the main content while we assemble everything */
